[project]
name = "o365"
version = "2.0.38"
description = "O365 - Microsoft Graph and Office 365 API made easy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "msal>=1.31.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "tzdata>=2024.2",
    "tzlocal>=5.2",
]
dynamic = ["license", "authors", "maintainers", "classifiers"]

[dependency-groups]
dev = [
    "click>=8.1.8",
    "pytest>=8.3.4",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
